--- a/test/role.yaml
+++ b/test/role.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: tigera-elasticsearch-access-all
 rules:
-- apiGroups: ["elasticsearch.tigera.io"]
+- apiGroups: ["lma.tigera.io"]
   resources: ["index"]
   resourceNames: ["flows", "audit*", "audit_kube", "audit_ee", "events"]
   verbs: ["get"]
@@ -14,7 +14,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: tigera-elasticsearch-access-flowonly
 rules:
-- apiGroups: ["elasticsearch.tigera.io"]
+- apiGroups: ["lma.tigera.io"]
   resources: ["index"]
   resourceNames: ["flows"]
   verbs: ["get"]
@@ -25,7 +25,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: tigera-elasticsearch-access-auditonly
 rules:
-- apiGroups: ["elasticsearch.tigera.io"]
+- apiGroups: ["lma.tigera.io"]
   resources: ["index"]
   resourceNames: ["audit*", "audit_kube", "audit_ee"]
   verbs: ["get"]
@@ -36,7 +36,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: tigera-elasticsearch-access-audit_kube-only
 rules:
-- apiGroups: ["elasticsearch.tigera.io"]
+- apiGroups: ["lma.tigera.io"]
   resources: ["index"]
   resourceNames: ["audit_kube"]
   verbs: ["get"]
