--- a/_includes/v2.4/charts/tigera-secure-ee/templates/operator.yaml
+++ b/_includes/v2.4/charts/tigera-secure-ee/templates/operator.yaml
@@ -74,7 +74,7 @@ rules:
   resources:
   - nodes
   - namespaces
-  verbs: ["list", "watch"]
+  verbs: ["get", "list", "watch"]
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -109,6 +109,7 @@ spec:
           - --prometheus-config-reloader=quay.io/coreos/prometheus-config-reloader:{{.Values.prometheusConfigReloader.tag}}
           - --config-reloader-image=quay.io/coreos/configmap-reload:{{.Values.configmapReload.tag}}
           - --config-reloader-memory=25Mi
+          - --namespaces={{ .Release.Namespace }}
         resources:
           requests:
             cpu: 100m
