--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/operator.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/operator.yaml
@@ -1,6 +1,6 @@
 ---
 layout: null
 ---
-{% helm tigera-secure-ee --execute templates/operator.yaml %}
+{% helm tigera-secure-ee --namespace calico-monitoring --execute templates/operator.yaml %}
 createCustomResources: false
 {% endhelm %}
