--- a/v2.4/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/operator.yaml
+++ b/v2.4/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/operator.yaml
@@ -1,6 +1,6 @@
 ---
 layout: null
 ---
-{% helm tigera-secure-ee secure-es --execute templates/operator.yaml %}
+{% helm tigera-secure-ee secure-es --namespace calico-monitoring --execute templates/operator.yaml %}
 createCustomResources: false
 {% endhelm %}
