--- a/_includes/v2.4/non-helm-manifests/compliance-reporter-pod.yaml
+++ b/_includes/v2.4/non-helm-manifests/compliance-reporter-pod.yaml
@@ -12,20 +12,15 @@ spec:
   tolerations:
     - key: node-role.kubernetes.io/master
       effect: NoSchedule
-{{- if .Values.imagePullSecrets }}
   imagePullSecrets:
-{{- range $key, $value := .Values.imagePullSecrets }}
-    - name: {{ $key }}
-{{- end }}
-{{- end }}
+    - name: cnx-pull-secret
   containers:
   - name: reporter
     # Modify this image name, if you have re-tagged the image and are using a local
     # docker image repository.
     # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    image: {{.Values.complianceReporter.image}}:{{.Values.complianceReporter.tag}}
+    image: {{page.registry}}{{site.imageNames["compliance-reporter"]}}:{{site.data.versions[page.version].first.components["compliance-reporter"].version}}
     # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-{{ tuple .Values.complianceReporter.resources | include "tigera-secure-ee.resourceLimits" | indent 4 -}}
     env:
       # Modify these values with the report name and start and end time of the report
       # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -38,10 +33,6 @@ spec:
       # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     - name: LOG_LEVEL
       value: "warning"
-{{- if eq .Values.platform "gke" }}
-    - name: HEALTH_PORT
-      value: "9199"
-{{- end }}
     - name: ELASTIC_INDEX_SUFFIX
       valueFrom:
         configMapKeyRef:
@@ -84,20 +75,13 @@ spec:
           name: tigera-es-config
           key: tigera.elasticsearch.ca.path
           optional: true
-{{- if .Values.complianceReporter.env }}
-{{ toYaml .Values.complianceReporter.env | indent 6 }}
-{{- end }}
     volumeMounts:
     - name: elastic-ca-cert-volume
       mountPath: /etc/ssl/elastic/
     livenessProbe:
       httpGet:
         path: /liveness
-{{- if eq .Values.platform "gke" }}
-        port: 9199
-{{- else }}
         port: 9099
-{{- end }}
         host: localhost
   volumes:
   - name: elastic-ca-cert-volume
