--- a/v2.4/manifests/compliance-reporter-pod.yaml
+++ b/v2.4/manifests/compliance-reporter-pod.yaml
@@ -1,7 +1,4 @@
 ---
 layout: null
 ---
-{% helm tigera-secure-ee --execute templates/compliance/compliance-reporter-pod.yaml %}
-# TODO: fix bug where an empty helm includer doesn't render the manifest?
-foo: bar
-{% endhelm %}
+{% include {{page.version}}/non-helm-manifests/compliance-reporter-pod.yaml %}
