--- a/_includes/v2.4/charts/tigera-secure-ee/templates/manager.yaml
+++ b/_includes/v2.4/charts/tigera-secure-ee/templates/manager.yaml
@@ -48,7 +48,7 @@ data:
   # Prometheus server resource path
   tigera.cnx-manager.prometheus-api-url: "/api/v1/namespaces/calico-monitoring/services/calico-node-prometheus:9090/proxy/api/v1"
   # Compliance resource path
-  tigera.cnx-manager.compliance-api-url: "/compliance"
+  tigera.cnx-manager.compliance-reports-api-url: "/compliance/reports"
   # Query api url
   tigera.cnx-manager.query-api-url: "/api/v1/namespaces/kube-system/services/https:cnx-api:8080/proxy"
   # Elasticsearch service resource path
@@ -219,11 +219,11 @@ spec:
               configMapKeyRef:
                 name: tigera-cnx-manager-config
                 key: tigera.cnx-manager.prometheus-api-url
-          - name: CNX_COMPLIANCE_API_URL
+          - name: CNX_COMPLIANCE_REPORTS_API_URL
             valueFrom:
               configMapKeyRef:
                 name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.compliance-api-url
+                key: tigera.cnx-manager.compliance-reports-api-url
           - name: CNX_QUERY_API_URL
             valueFrom:
               configMapKeyRef:
