--- a/_data/master/navbars/maintenance.yml
+++ b/_data/master/navbars/maintenance.yml
@@ -8,6 +8,8 @@ toc:
   section:
   - title: Kubernetes
     path: /maintenance/kubernetes-upgrade-tsee
+  - title: OpenShift
+    path: /maintenance/openshift-upgrade-tsee
 - title: Decommissioning a node
   path: /maintenance/decommissioning-a-node
 - title: Component logs
