--- a/glide.yaml
+++ b/glide.yaml
@@ -20,12 +20,14 @@ import:
   - pkg/ns
 - package: github.com/mcuadros/go-version
 - package: github.com/onsi/ginkgo
+  subpackages:
+  - extensions/table
 - package: github.com/onsi/gomega
   subpackages:
   - gexec
 - package: github.com/projectcalico/libcalico-go
   repo:    git@github.com:tigera/libcalico-go-private
-  version: d878d7f5d6345aa2e129834154220cabb565e779
+  version: 63a9437e28fd073bd0e731d96e5c831bb21ffd11
   subpackages:
   - lib/apiconfig
   - lib/apis/v3
